raffia/tests/error/scss/at-rule/include/unterminated.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ unterminated.scss:3:1
  │
3 │ }
  │ ^


